--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,6 +99,64 @@ a {
   color: inherit;
   text-decoration: none;
 }
+button.react-multiple-carousel__arrow--left {
+  right: 60px;
+    position: absolute;
+    margin-top: -28%;
+    margin-right: 11%;
+    border-radius: inherit;
+    width: 35px;
+    height: 35px;
+    line-height: 11px;
+    min-width: 35px;
+}
+button.react-multiple-carousel__arrow--right {
+  right: 12%;
+  position: absolute;
+  margin-top: -28%;
+  border-radius: initial;
+  padding: 0px;
+  height: 35px;
+  line-height: 11px;
+  width: 35px;
+  min-width: 35px;
+}
+
+.owl-prev,.owl-next {
+    padding: 3px 10px 1px 10px;
+    border: 1px solid gray;
+    margin-left: 11px;
+}
+.owl-nav-disable{
+    padding: 3px 10px 1px 10px;
+    border: 1px solid gray;
+    margin-left: 11px;
+}
+.owl-nav .owl-nav-disable:hover {
+  color: #31404B;
+  background: gray;
+  border-color: gray;
+}
+
+.owl-nav {
+    display: flex;
+    position: absolute;
+    margin-top: -25%;
+    right: 0;
+    margin-right: 12%;
+}
+.owl-nav .owl-next:hover {
+  color: #31404B;
+  background: #FFCC00;
+  border-color: #FFCC00;
+}
+.owl-nav .owl-prev:hover {
+  color: #31404B;
+  background: #FFCC00;
+  border-color: #FFCC00;
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   html {
